remove jfreechart references